# dataverse-to-mailchimp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/dataverse_to_mailchimp/: __init__.py  __main__.py  cli.py  dataverse.py  mailchimp.py  sync.py
tests/: test_sync.py
